fixed mobile overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@media (max-width: 600px) {
+  .topPage {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+  }
+}
 .App {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -27,6 +34,7 @@ body {
   max-width: 100%;
   height: auto;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .title {
